MODIFY: Currently, the steps for downloading the JavaFX runtime library are at the same level as the launcher's self-updating process, blocking subsequent threads to ensure that the client's runtime library can be downloaded completely. However, regardless of whether the runtime library download succeeds or fails, the subsequent process will proceed normally